# little-loadshedder

./: Cargo.toml  Dockerfile  README.md
client/: Cargo.toml
client/src/: main.rs
metrics/: docker-compose.yml
metrics/grafana/: datasource.yml
metrics/prometheus/: prometheus.yml
microservices/: Cargo.toml
microservices/src/: loadshed.rs  main.rs
promtester/: Cargo.toml
promtester/src/: main.rs
